--- a/movie_app/base_templates/menu.html
+++ b/movie_app/base_templates/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'main' %}">Movie</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
