create modelform Review for about movie template

--- a/movie_app/base_templates/detail_base.html
+++ b/movie_app/base_templates/detail_base.html
@@ -22,7 +22,12 @@
 
     </div>
 
-        {% block additional_block %} {% endblock %}
+    <div class="row mt-4">
+        <div class="col-8">
+            {% block additional_block %} {% endblock %}
+        </div>
+    </div>
+
 
     </div>
 
